<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, ParseStarterProjectActivity!</string>
    <string name="app_name">Atividade Colaborativa</string>
    <string name="botao1">Projeto</string>
    <string name="botao2">Grupo</string>
    <string name="botao3">Feeds</string>
    <string name="nomeProjeto">Projeto:</string>
    <string name="contexto">Projetos</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hint_apelido">Apelido</string>
    <string name="hint_celular">Celular</string>
    <string name="bt_entrar">Entrar</string>
	<string name="bt_projeto">Projeto</string>
	<string name="bt_feed">Feed</string>
	<string name="bt_principal">Principal</string>
	<string name="bt_atividade">Atividade</string>
	<string name="str_welcome">Seja bem vindo a Atividade Colaborativa!</string>
    
</resources>
