<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:background="@drawable/bg">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/titulo"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/app_name"
            android:textAppearance="?android:attr/textAppearanceLarge"  />

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            android:text="@string/str_welcome"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/main_apelido"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_apelido"
            android:inputType="textCapWords" 
            android:background="@drawable/apptheme_textfield_default_holo_light">

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/main_celular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_celular"
            android:inputType="phone" 
            android:background="@drawable/apptheme_textfield_default_holo_light" />
        

            <Button
                android:id="@+id/entrar"
                style="@style/Button"
                android:padding="10dp"
            	android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bt_entrar" />
       
    </LinearLayout>

</RelativeLayout>